Particle Hair get occluded by refrence image #76729

Closed
opened 2020-05-14 00:21:03 +02:00 by Julian Mohr · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90 (sub 1), branch: master, commit date: 2020-05-13 13:19, hash: 3a1426afbd

Short description of error
particle hair gets occluded by refrence image in render preview in cycles

Exact steps for others to reproduce the error
create particle hair
add an refrence image
switch to render preview
hairbg_solid.png
hair bug.png

even though the particle system is end of life this should be taken in consideration for the release.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90 (sub 1), branch: master, commit date: 2020-05-13 13:19, hash: `3a1426afbd` **Short description of error** particle hair gets occluded by refrence image in render preview in **cycles** **Exact steps for others to reproduce the error** create particle hair add an refrence image switch to render preview ![hairbg_solid.png](https://archive.blender.org/developer/F8533728/hairbg_solid.png) ![hair bug.png](https://archive.blender.org/developer/F8533731/hair_bug.png) even though the particle system is end of life this should be taken in consideration for the release.
Author

Added subscriber: @Jewls

Added subscriber: @Jewls
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-05-14 10:37:05 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report,

I included an example file demonstrating the issue #76729.blend

When using cycles an opengl render engine (external_engine.c) will render the depth buffer where the overlays are working on. This engine doesn't draw particle systems in the depth buffer. This should be added.

Thanks for the report, I included an example file demonstrating the issue [#76729.blend](https://archive.blender.org/developer/F8534756/T76729.blend) When using cycles an opengl render engine (external_engine.c) will render the depth buffer where the overlays are working on. This engine doesn't draw particle systems in the depth buffer. This should be added.

This issue was referenced by 80fffba132

This issue was referenced by 80fffba132c58c0c4187b2905f7700f4597aa5c2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76729
No description provided.